# intelliqx

./: .env.example  .gitignore  .vulture-whitelist  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.agent  Dockerfile.service  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  pyproject.toml
agents/ai/: __init__.py  _roles.py  roles.py
agents/coordination/: __init__.py  cli_progress.py  events.py  knowledge_rag.py  memory_manager.py  orchestrator.py  planner.py  smoke.py  templates.py  tool_manager.py
agents/execution/: __init__.py  accessibility.py  cost_optimization.py  design_intel.py  environment.py  execution.py  failure_analysis.py  performance.py  security.py  self_healing.py  visual_regression.py
agents/governance/: __init__.py  governance_compliance.py  observability.py  release_readiness.py  reporting.py
agents/intelligence/: __init__.py  code_intel.py  coverage_analysis.py  critic.py  learning.py  models.py  prompt_management.py  requirements_intel.py  risk_assessment.py  test_data.py  test_design.py
agents/sgir/: __init__.py  pipeline.py  tools.py
agents/tier1/: __init__.py  events.py  knowledge_rag.py  memory_manager.py  orchestrator.py  planner.py  smoke.py  templates.py  tool_manager.py
agents/tier2/: __init__.py  code_intel.py  coverage_analysis.py  critic.py  learning.py  prompt_management.py  requirements_intel.py  risk_assessment.py  test_data.py  test_design.py
agents/tier3/: __init__.py  accessibility.py  cost_optimization.py  design_intel.py  environment.py  execution.py  failure_analysis.py  performance.py  security.py  self_healing.py  visual_regression.py
agents/tier4/: __init__.py  governance_compliance.py  observability.py  release_readiness.py  reporting.py
libs/intelliqx-agents/: pyproject.toml
libs/intelliqx-agents/src/aqip_agents/: decorators.py
libs/intelliqx-agents/src/intelliqx_agents/: __init__.py  base.py  decorators.py  registry.py
libs/intelliqx-ai/: pyproject.toml
libs/intelliqx-ai/src/intelliqx_ai/: __init__.py  runtime.py
libs/intelliqx-compute/: pyproject.toml
libs/intelliqx-compute/src/aqip_compute/: gcp.py
libs/intelliqx-compute/src/intelliqx_compute/: __init__.py  aws.py  gcp.py  modal.py  runtime.py
libs/intelliqx-core/: pyproject.toml
libs/intelliqx-core/src/aqip_core/: events.py  models.py
libs/intelliqx-core/src/intelliqx_core/: __init__.py  errors.py  events.py  ids.py  models.py
libs/intelliqx-events/: pyproject.toml
libs/intelliqx-events/src/aqip_events/: gcp.py  handler.py  schemas.py
libs/intelliqx-events/src/intelliqx_events/: __init__.py  aws.py  base.py  bus.py  gcp.py  modal.py  schemas.py
libs/intelliqx-graph/: pyproject.toml
libs/intelliqx-graph/src/intelliqx_graph/: __init__.py  adk_agents.py  layers.py  models.py  operations.py  query.py  repository.py  serialization.py
libs/intelliqx-kg/: pyproject.toml
libs/intelliqx-kg/src/aqip_kg/: __init__.py
libs/intelliqx-kg/src/intelliqx_kg/: __init__.py  graph.py
libs/intelliqx-llm/: pyproject.toml
libs/intelliqx-llm/src/aqip_llm/: aws.py  gcp.py  modal.py
libs/intelliqx-llm/src/intelliqx_llm/: __init__.py  __main__.py  _smoke.py  aws.py  client.py  gcp.py  minimax.py  modal.py
libs/intelliqx-observability/: pyproject.toml
libs/intelliqx-observability/src/aqip_observability/: metrics.py
libs/intelliqx-observability/src/intelliqx_observability/: __init__.py  logging.py  metrics.py  tracing.py
libs/intelliqx-okf/: pyproject.toml
libs/intelliqx-okf/src/intelliqx_okf/: __init__.py  bundle.py  catalog.py  concept.py  embed.py  frontmatter.py  index.py  llm_embed.py  retrieval.py  validator.py
libs/intelliqx-portability/: pyproject.toml
libs/intelliqx-portability/src/aqip_portability/: __init__.py  adapter.py
libs/intelliqx-portability/src/intelliqx_portability/: __init__.py  adapter.py  config.py
libs/intelliqx-sdk/: pyproject.toml
libs/intelliqx-sdk/src/aqip_sdk/: __init__.py
libs/intelliqx-sdk/src/intelliqx_sdk/: __init__.py  manifest.py  sandbox.py
libs/intelliqx-service/: pyproject.toml
libs/intelliqx-state/: pyproject.toml
libs/intelliqx-state/src/aqip_state/: gcp.py  (+1 more)
libs/intelliqx-tenant/: pyproject.toml
libs/intelliqx-tools/: pyproject.toml
libs/intelliqx-vector/: pyproject.toml
tests/: conftest.py  pyproject.toml
tests/contract/: test_graph_contract.py  test_output_contract.py  test_portability_contract.py
tests/cross_cloud/: test_agent_parity.py  test_event_bus_parity.py  test_llm_parity.py  test_state_parity.py  test_storage_parity.py
tests/e2e/: test_phase1_pipeline.py  test_phase4_pipeline.py  test_phase5_release.py
tests/fixtures/reference_app/: __init__.py  app.py
tests/integration/: test_okf_retrieval.py
tests/okf/: _embed.py  test_embed.py  test_index.py
tests/unit/: __init__.py  test_agent_roles.py  test_aqip_agents.py  test_aqip_compute.py  test_aqip_core.py  test_aqip_events.py  test_aqip_kg.py  test_aqip_llm.py  test_aqip_observability.py  test_aqip_portability.py  test_aqip_sdk.py  test_aqip_state.py  test_aqip_storage.py  test_aqip_tenant.py  test_aqip_tools.py  test_aqip_vector.py  test_aqip_vector_zvec.py  test_coordination_cli_progress.py  test_coordination_knowledge_rag.py  test_coordination_memory_manager.py  test_coordination_orchestrator.py  test_coordination_planner.py  test_coordination_tool_manager.py  test_execution_accessibility.py  test_execution_cost_optimization.py  test_execution_design_intel.py  test_execution_environment.py  test_execution_execution.py  test_execution_failure_analysis.py  test_execution_performance.py  test_execution_security.py  test_execution_self_healing.py  test_execution_visual_regression.py  test_governance_compliance.py  test_governance_observability.py  test_governance_release_readiness.py  test_governance_reporting.py  test_imports.py  test_intelligence_agents.py  test_intelligence_code_intel.py  (+51 more)
tests/unit/test_sgir/: __init__.py  test_analysis.py  test_backends.py  test_models.py  test_optimization.py  test_parsers.py  test_query.py  test_serialization.py
(+127 files in other folders)
