[project]
name = "intelliqx-agents-impl"
version = "0.2.0"
description = "IntelliqX agent implementations (coordination, intelligence, execution, governance)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "intelliqx-core",
    "intelliqx-events",
    "intelliqx-llm",
    "intelliqx-state",
    "intelliqx-observability",
    "intelliqx-compute",
    "intelliqx-agents",
    "intelliqx-tools",
    "intelliqx-kg",
    "intelliqx-storage",
    "intelliqx-okf",
    "intelliqx-ai",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-events = { workspace = true }
intelliqx-llm = { workspace = true }
intelliqx-state = { workspace = true }
intelliqx-observability = { workspace = true }
intelliqx-compute = { workspace = true }
intelliqx-agents = { workspace = true }
intelliqx-tools = { workspace = true }
intelliqx-kg = { workspace = true }
intelliqx-storage = { workspace = true }
intelliqx-okf = { workspace = true }
intelliqx-ai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]