[project]
name = "intelliqx-tests"
version = "0.1.0"
description = "IntelliqX test suite (cross-package)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-events",
    "intelliqx-storage",
    "intelliqx-vector",
    "intelliqx-kg",
    "intelliqx-state",
    "intelliqx-llm",
    "intelliqx-compute",
    "intelliqx-observability",
    "intelliqx-tools",
    "intelliqx-agents",
    "intelliqx-tenant",
    "intelliqx-sdk",
    "intelliqx-okf",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-events = { workspace = true }
intelliqx-storage = { workspace = true }
intelliqx-vector = { workspace = true }
intelliqx-kg = { workspace = true }
intelliqx-state = { workspace = true }
intelliqx-llm = { workspace = true }
intelliqx-compute = { workspace = true }
intelliqx-observability = { workspace = true }
intelliqx-tools = { workspace = true }
intelliqx-agents = { workspace = true }
intelliqx-tenant = { workspace = true }
intelliqx-sdk = { workspace = true }
intelliqx-okf = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]