[project]
name = "intelliqx-tests"
version = "0.2.0"
description = "IntelliqX test suite (cross-package)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.4",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "intelliqx-core",
    "intelliqx-events",
    "intelliqx-storage",
    "intelliqx-kg",
    "intelliqx-state",
    "intelliqx-llm",
    "intelliqx-compute",
    "intelliqx-observability",
    "intelliqx-tools",
    "intelliqx-agents",
    "intelliqx-tenant",
    "intelliqx-sdk",
    "intelliqx-okf",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-events = { workspace = true }
intelliqx-storage = { workspace = true }
intelliqx-kg = { workspace = true }
intelliqx-state = { workspace = true }
intelliqx-llm = { workspace = true }
intelliqx-compute = { workspace = true }
intelliqx-observability = { workspace = true }
intelliqx-tools = { workspace = true }
intelliqx-agents = { workspace = true }
intelliqx-tenant = { workspace = true }
intelliqx-sdk = { workspace = true }
intelliqx-okf = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]
