[project]
name = "intelliqx-agents"
version = "0.2.0"
description = "IntelliqX agent base class and decorators"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "intelliqx-core",
    "intelliqx-events",
    "intelliqx-state",
    "intelliqx-observability",
    "intelliqx-compute",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-events = { workspace = true }
intelliqx-state = { workspace = true }
intelliqx-observability = { workspace = true }
intelliqx-compute = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_agents"]
