[project]
name = "intelliqx-ai"
version = "0.2.0"
description = "Pydantic AI runtime and shared tools for IntelliqX agents."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "pydantic-ai-slim[openai]>=2.13,<3",
    "intelliqx-core",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_ai"]