[project]
name = "intelliqx-compute"
version = "0.1.0"
description = "IntelliqX compute runtime abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-observability",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_compute"]