[project]
name = "intelliqx-core"
version = "0.2.0"
description = "IntelliqX shared core: Pydantic models, enums, errors, event base"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "ulid-py>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_core"]