[project]
name = "intelliqx-events"
version = "0.1.0"
description = "AQIP event bus abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "aqip-core",
    "aqip-portability",
]

[tool.uv.sources]
aqip-core = { workspace = true }
aqip-portability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_events"]