[project]
name = "intelliqx-graph"
version = "0.2.0"
description = "Software Graph Intermediate Representation (SGIR) — graph-based software intelligence"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "networkx>=3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_graph"]
