[project]
name = "intelliqx-kg"
version = "0.1.0"
description = "AQIP Knowledge Graph: Parquet + DuckDB"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "duckdb>=1.0",
    "pyarrow>=16",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-storage",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_kg"]