[project]
name = "intelliqx-kg"
version = "0.2.0"
description = "IntelliqX Knowledge Graph: Parquet + DuckDB"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "duckdb>=1.1",
    "pyarrow>=17",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-storage",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_kg"]