[project]
name = "intelliqx-llm"
version = "0.1.0"
description = "AQIP LLM client abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.40",
    "aqip-core",
    "aqip-portability",
    "aqip-observability",
]

[tool.uv.sources]
aqip-core = { workspace = true }
aqip-portability = { workspace = true }
aqip-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_llm"]