[project]
name = "intelliqx-llm"
version = "0.1.0"
description = "AQIP LLM client abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.40",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-observability",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_llm"]