[project]
name = "intelliqx-observability"
version = "0.2.0"
description = "IntelliqX observability (OTel + structured logging)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "structlog>=24.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "intelliqx-core",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_observability"]