[project]
name = "intelliqx-observability"
version = "0.2.0"
description = "IntelliqX observability (OTel + Loguru structured logging)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "intelliqx-core",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_observability"]