[project]
name = "intelliqx-okf"
version = "0.1.0"
description = "IntelliqX OKF (Open Knowledge Format) reader/writer + SQLite catalog"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "intelliqx-core",
    "sqlite-vec>=0.1.9",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_okf"]
