[project]
name = "aqip-portability"
version = "0.1.0"
description = "AQIP cloud portability adapter"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "aqip-core",
]

[tool.uv.sources]
aqip-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqip_portability"]