[project]
name = "intelliqx-portability"
version = "0.2.0"
description = "IntelliqX cloud portability adapter"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "intelliqx-core",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_portability"]