[project]
name = "intelliqx-sdk"
version = "0.1.0"
description = "AQIP third-party agent SDK"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "aqip-core",
    "aqip-agents",
]

[tool.uv.sources]
aqip-core = { workspace = true }
aqip-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqip_sdk"]