[project]
name = "intelliqx-sdk"
version = "0.2.0"
description = "IntelliqX third-party agent SDK"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "intelliqx-core",
    "intelliqx-agents",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-agents = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_sdk"]