[project]
name = "intelliqx-service"
version = "0.2.0"
description = "Hardened single-node ASGI service + embedded worker."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "intelliqx-core",
    "intelliqx-events",
    "intelliqx-observability",
    "intelliqx-compute",
    "intelliqx-state",
    "intelliqx-storage",
    "intelliqx-okf",
    "intelliqx-ai",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-events = { workspace = true }
intelliqx-observability = { workspace = true }
intelliqx-compute = { workspace = true }
intelliqx-state = { workspace = true }
intelliqx-storage = { workspace = true }
intelliqx-okf = { workspace = true }
intelliqx-ai = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_service"]