[project]
name = "intelliqx-state"
version = "0.1.0"
description = "AQIP state/cache abstraction (Redis-compatible)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "intelliqx-core",
    "intelliqx-portability",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_state"]