[project]
name = "intelliqx-tools"
version = "0.1.0"
description = "AQIP tool manager + MCP gateway"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "aqip-core",
    "aqip-portability",
    "aqip-state",
]

[tool.uv.sources]
aqip-core = { workspace = true }
aqip-portability = { workspace = true }
aqip-state = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_tools"]