[project]
name = "intelliqx-tools"
version = "0.2.0"
description = "IntelliqX tool manager + MCP gateway"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.8",
    "httpx>=0.27",
    "intelliqx-core",
    "intelliqx-state",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-state = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_tools"]