[project]
name = "aqip-vector"
version = "0.1.0"
description = "AQIP vector index (zvec) abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "zvec>=0.5",
    "aqip-core",
    "aqip-portability",
    "aqip-storage",
]

[tool.uv.sources]
aqip-core = { workspace = true }
aqip-portability = { workspace = true }
aqip-storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqip_vector"]