[project]
name = "intelliqx-vector"
version = "0.1.0"
description = "IntelliqX vector index (zvec) abstraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "zvec>=0.5",
    "sqlite-vec>=0.1.9",
    "intelliqx-core",
    "intelliqx-portability",
    "intelliqx-storage",
]

[tool.uv.sources]
intelliqx-core = { workspace = true }
intelliqx-portability = { workspace = true }
intelliqx-storage = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelliqx_vector"]